crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
! A
! B
! C
! D
|-
| <!-- placeholder -->
|
| *
*
| ok
|}
