crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-empty-header.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
!
!
|-
| a
| b
|}
