crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<blockquote>{| class="wikitable"
|-
! a
! b
|-
| 1
| 2
|}
</blockquote>
