crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
| rowspan="2"| tall
| a
|-
| b
|}
