crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|+ The full caption text
|-
! h
|-
| v
|}
